--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ section {
 }
 
 #contact {
-    background-color: white;
+    background-color: rgba(181, 217, 181, 0.3);
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
